--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <title>web page portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav class="container">
-            <h2 class="baritem">Welcome</h2>
-            <img src="./Union.svg" alt="menu">
+            <ul>
+                <li><a><h2 class="baritem">Welcome</h2></a></li>          
+                <li><a><img src="./Union.svg" alt="menu"></li></a>
+            </ul>
         </nav>
     </header>
     <section class="tittleContainer">
@@ -22,11 +22,11 @@
         <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
        </p>
         <ul class="mediaContainer">
-            <li><a href="https://twitter.com/magpe02" target="_blank" ><img class="mediaIcon" src="./twitter.svg" alt="Twitter"></a></li>
-            <li><a href="https://www.linkedin.com/in/jean-pierre-barba-arredondo-114b851b4/" target="_blank" ><img class="mediaIcon" src="./Linkedin icon.svg" alt="linkedin"></a></li>
-            <li><a href="https://medium.com/" target="_blank" ><img class="mediaIcon" src="./medium (1).svg" alt="github"></a></li>
-            <li><a href="https://github.com/PierreBarba" target="_blank" ><img class="mediaIcon" src="./github.svg" alt="Twitter"></a></li>
-            <li><a href="https://angel.co/" target="_blank" ><img class="mediaIcon" src="./angellist.svg" alt="github"></a></li>
+            <li><a href="https://twitter.com/magpe02" target="_blank" rel="noopener" ><img class="mediaIcon" src="./twitter.svg" alt="Twitter"></a></li>
+            <li><a href="https://www.linkedin.com/in/jean-pierre-barba-arredondo-114b851b4/" target="_blank" rel="noopener" ><img class="mediaIcon" src="./Linkedin icon.svg" alt="linkedin"></a></li>
+            <li><a href="https://medium.com/" target="_blank" rel="noopener" ><img class="mediaIcon" src="./medium (1).svg" alt="github"></a></li>
+            <li><a href="https://github.com/PierreBarba" target="_blank" rel="noopener" ><img class="mediaIcon" src="./github.svg" alt="Twitter"></a></li>
+            <li><a href="https://angel.co/" target="_blank" rel="noopener"><img class="mediaIcon" src="./angellist.svg" alt="github"></a></li>
         </ul>
     </section>
 </body>
