fix reviewer coments

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
         <nav class="container">
             <ul>
-                <li><a><h2 class="baritem">Welcome</h2></a></li>          
-                <li><a><img src="./Union.svg" alt="menu"></li></a>
+                <li><h2 class="baritem">Welcome</h2></li>          
+                <li><a href="/" rel="noopener"><img src="./Union.svg" alt="menu" ></li></a>
             </ul>
         </nav>
     </header>
