add form and modify html/css

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -149,6 +151,28 @@
             </ul>
         </section>
     </section>
+    <section class="containerThirdTittle">
+        <h2 class="ThirdTittle">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
+    </section>
+    <form class="finishForm" action="https://formspree.io/f/mknepeba" method="post";>
+        <input class="inputText" type="text" name="name" id="name" maxlength="30" placeholder="full name" required>
+        <input class="inputEmail" type="email" name="name" id="name" placeholder="email adress" required>
+        <textarea class="finalTextarea" name="message" id="message" rows="10" cols="30" placeholder="enter text here" maxlength="500" required></textarea>
+        <button class="finalButton" type="submit">get in touch</button>
+    </form>
+    <section class="finalSection">
+        <ul class="finalContainer">
+            <li class="finalList"><a href="https://twitter.com/magpe02" target="_blank" rel="noopener" ><img class="mediaIcon" src="./twitter.svg" alt="Twitter"></a></li>
+            <li class="finalList"><a href="https://www.linkedin.com/in/jean-pierre-barba-arredondo-114b851b4/" target="_blank" rel="noopener" ><img class="mediaIcon" src="./Linkedin icon.svg" alt="linkedin"></a></li>
+            <li class="finalList"><a href="https://medium.com/" target="_blank" rel="noopener" ><img class="mediaIcon" src="./medium (1).svg" alt="github"></a></li>
+            <li class="finalList"><a href="https://github.com/PierreBarba" target="_blank" rel="noopener" ><img class="mediaIcon" src="./github.svg" alt="Twitter"></a></li>
+            <li class="finalList"><a href="https://angel.co/" target="_blank" rel="noopener"><img class="mediaIcon" src="./angellist.svg" alt="github"></a></li>
+        </ul>
+    </section>
+    <p class="finalEmail">
+        magpe02@hotmail.com
+    </p>
+    <hr class="finalSeparador">
 </body>
 </html>
 
