--- a/index.html
+++ b/index.html
@@ -25,16 +25,12 @@
         </header>
         <div class="containerDesk">
             <ul class="unlistbar">
-                <li class="text">portfolio</li>
-                <li class="text">about</li>
-                <li class="text">contact</li>
+                <li class="text">Portfolio</li>
+                <li class="text">About</li>
+                <li class="text">Contact</li>
             </ul>
         </div>
         <section class="tittleContainer">
-            <!-- <div class="imgBackground">
-                <img class="imgOneMovil" src="./header-illsutration-mobile@2x.svg" alt="imgBackground">
-                <img class="imgTwoDesk" src="./imgdesktopversion/Header-llustration-desktop.svg" alt="otherImg">
-            </div> -->
             <h1 class="welcome">Hey there. I'm Pierre barba<br><span class="description"> I'm a software developer</span></h1>
             <p class="textcenter">I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
             </p>
