accessebility Image text alternatives

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
             <p class="textcenter">I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
             </p>
              <ul class="mediaContainer">
-                 <li><a href="https://twitter.com/magpe02" target="_blank" rel="noopener" ><img class="mediaIcon" src="./twitter.svg" alt="Twitter"></a></li>
-                 <li><a href="https://www.linkedin.com/in/jean-pierre-barba-arredondo-114b851b4/" target="_blank" rel="noopener" ><img class="mediaIcon" src="./Linkedin icon.svg" alt="linkedin"></a></li>
-                 <li><a href="https://medium.com/" target="_blank" rel="noopener" ><img class="mediaIcon" src="./medium (1).svg" alt="github"></a></li>
-                 <li><a href="https://github.com/PierreBarba" target="_blank" rel="noopener" ><img class="mediaIcon" src="./github.svg" alt="Twitter"></a></li>
-                 <li><a href="https://angel.co/" target="_blank" rel="noopener"><img class="mediaIcon" src="./angellist.svg" alt="github"></a></li>
+                 <li><a href="https://twitter.com/magpe02" target="_blank" rel="noopener" ><img class="mediaIcon" src="./twitter.svg" alt="iconTwitter"></a></li>
+                 <li><a href="https://www.linkedin.com/in/jean-pierre-barba-arredondo-114b851b4/" target="_blank" rel="noopener" ><img class="mediaIcon" src="./Linkedin icon.svg" alt="iconlinkedin"></a></li>
+                 <li><a href="https://medium.com/" target="_blank" rel="noopener" ><img class="mediaIcon" src="./medium (1).svg" alt="iconMedium"></a></li>
+                 <li><a href="https://github.com/PierreBarba" target="_blank" rel="noopener" ><img class="mediaIcon" src="./github.svg" alt="iconGithub"></a></li>
+                 <li><a href="https://angel.co/" target="_blank" rel="noopener"><img class="mediaIcon" src="./angellist.svg" alt="iconAngel"></a></li>
              </ul>
-             <a class="arrowDown" href="#MyRecentWork"><img src="./Disabled.svg" alt="down arrow"></a>
+             <a class="arrowDown" href="#MyRecentWork"><img src="./Disabled.svg" alt="down"></a>
         </section>
     <hr class="separator">
     <section class="myRecentWork">
@@ -122,7 +122,7 @@
         </div>
     </section>
     <section class="containerAboutMe">
-        <img class="svgImage"src="./illustration 1- about me-mobile.svg" alt="(imgTop)">
+        <img class="svgImage"src="./illustration 1- about me-mobile.svg" alt="iconDove">
         <h2 class="blueTitle">About me</h2>
         <p> I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
         <button type="button"class="buttonResume">Get My Resume</button>
@@ -131,7 +131,7 @@
         <div class="cardGridOne">
             <section class="postOne">
                 <section class="aboutMeCard">
-                    <img src="./Group.svg" alt="Languages">
+                    <img src="./Group.svg" alt="iconBall">
                     <h3 class="subtitle">Frameworks</h3>
                     <ul>
                         <li class="aboutMeListItem">Bootstrap</li>
@@ -144,7 +144,7 @@
             </section>
             <section class="postOne">
                 <section class="aboutMeCard">
-                    <img src="./Group (1).svg" alt="Languages">
+                    <img src="./Group (1).svg" alt="iconCubes">
                     <h3 class="subtitle">Languages</h3>
                     <ul>
                         <li class="aboutMeListItem">JavaScript</li>
@@ -156,7 +156,7 @@
             </section> 
             <section class="postOne">
                 <section class="aboutMeCard">
-                    <img src="./Icon Name.svg" alt="Languages">
+                    <img src="./Icon Name.svg" alt="iconRay">
                     <h3 class="subtitle">Skills</h3>
                     <ul>
                         <li class="aboutMeListItem">Codekit</li>
@@ -170,8 +170,8 @@
         </div>
     </section>
     <section class="formThirdTittle">
-                <img class="pilarRight" src="./imgdesktopversion/pilarfinal.svg" alt="pilarright">
-                <img class="cubeFinalLeft" src="./imgdesktopversion/cubofinalleft.svg" alt="cubeFinalLeft">
+                <img class="pilarRight" src="./imgdesktopversion/pilarfinal.svg" alt="imgPilarright">
+                <img class="cubeFinalLeft" src="./imgdesktopversion/cubofinalleft.svg" alt="imgCubeFinalLeft">
                 <h2 class="ThirdTittle">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
             <section class="containerThirdTittleForm">
                 <form class="finishForm" action="https://formspree.io/f/mknepeba" method="post";>
@@ -188,11 +188,11 @@
     </p>
     <section class="finalSection">
         <ul class="finalContainer">
-            <li class="finalList"><a href="https://twitter.com/magpe02" target="_blank" rel="noopener" ><img class="mediaIcon" src="./twitter.svg" alt="Twitter"></a></li>
-            <li class="finalList"><a href="https://www.linkedin.com/in/jean-pierre-barba-arredondo-114b851b4/" target="_blank" rel="noopener" ><img class="mediaIcon" src="./Linkedin icon.svg" alt="linkedin"></a></li>
-            <li class="finalList"><a href="https://medium.com/" target="_blank" rel="noopener" ><img class="mediaIcon" src="./medium (1).svg" alt="github"></a></li>
-            <li class="finalList"><a href="https://github.com/PierreBarba" target="_blank" rel="noopener" ><img class="mediaIcon" src="./github.svg" alt="Twitter"></a></li>
-            <li class="finalList"><a href="https://angel.co/" target="_blank" rel="noopener"><img class="mediaIcon" src="./angellist.svg" alt="github"></a></li>
+            <li class="finalList"><a href="https://twitter.com/magpe02" target="_blank" rel="noopener" ><img class="mediaIcon" src="./twitter.svg" alt="iconTwitter"></a></li>
+            <li class="finalList"><a href="https://www.linkedin.com/in/jean-pierre-barba-arredondo-114b851b4/" target="_blank" rel="noopener" ><img class="mediaIcon" src="./Linkedin icon.svg" alt="iconlinkedin"></a></li>
+            <li class="finalList"><a href="https://medium.com/" target="_blank" rel="noopener" ><img class="mediaIcon" src="./medium (1).svg" alt="iconMedium"></a></li>
+            <li class="finalList"><a href="https://github.com/PierreBarba" target="_blank" rel="noopener" ><img class="mediaIcon" src="./github.svg" alt="iconGithub"></a></li>
+            <li class="finalList"><a href="https://angel.co/" target="_blank" rel="noopener"><img class="mediaIcon" src="./angellist.svg" alt="iconAngel"></a></li>
         </ul>
     </section>
     <hr class="finalSeparador">
