--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <p class="textcenter">I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
             </p>
              <ul class="mediaContainer">
-                 <li><a href="https://twitter.com/magpe02" target="_blank" rel="noopener" ><img class="mediaIcon" src="./twitter.svg" alt="iconTwitter"></a></li>
-                 <li><a href="https://www.linkedin.com/in/jean-pierre-barba-arredondo-114b851b4/" target="_blank" rel="noopener" ><img class="mediaIcon" src="./Linkedin icon.svg" alt="iconlinkedin"></a></li>
+                 <li><a href="https://twitter.com/magpe02" target="_blank" rel="noopener" ><img class="mediaIcon" src="./twitter.svg" alt="TwitterIcon"></a></li>
+                 <li><a href="https://www.linkedin.com/in/jean-pierre-barba-arredondo-114b851b4/" target="_blank" rel="noopener" ><img class="mediaIcon" src="./Linkedin icon.svg" alt="linkedinIcon"></a></li>
                  <li><a href="https://medium.com/" target="_blank" rel="noopener" ><img class="mediaIcon" src="./medium (1).svg" alt="iconMedium"></a></li>
                  <li><a href="https://github.com/PierreBarba" target="_blank" rel="noopener" ><img class="mediaIcon" src="./github.svg" alt="iconGithub"></a></li>
                  <li><a href="https://angel.co/" target="_blank" rel="noopener"><img class="mediaIcon" src="./angellist.svg" alt="iconAngel"></a></li>
@@ -175,8 +175,8 @@
                 <h2 class="ThirdTittle">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
             <section class="containerThirdTittleForm">
                 <form class="finishForm" action="https://formspree.io/f/mknepeba" method="post";>
-                    <input class="inputText" type="text" name="name" id="name" maxlength="30" placeholder="full name" required>
-                    <input class="inputTextLast" type="text" name="name" id="name" maxlength="30" placeholder="last name" required>
+                    <input class="inputText" type="text" name="name" id="name" maxlength="30" placeholder="fullname" required>
+                    <input class="inputTextLast" type="text" name="name" id="name" maxlength="30" placeholder="lastname" required>
                     <input class="inputEmail" type="email" name="name" id="name" placeholder="email adress" required>
                     <textarea class="finalTextarea" name="message" id="message" rows="10" cols="30" placeholder="enter text here" maxlength="500" required></textarea>
                     <button class="finalButton" type="submit">get in touch</button>
@@ -188,8 +188,8 @@
     </p>
     <section class="finalSection">
         <ul class="finalContainer">
-            <li class="finalList"><a href="https://twitter.com/magpe02" target="_blank" rel="noopener" ><img class="mediaIcon" src="./twitter.svg" alt="iconTwitter"></a></li>
-            <li class="finalList"><a href="https://www.linkedin.com/in/jean-pierre-barba-arredondo-114b851b4/" target="_blank" rel="noopener" ><img class="mediaIcon" src="./Linkedin icon.svg" alt="iconlinkedin"></a></li>
+            <li class="finalList"><a href="https://twitter.com/magpe02" target="_blank" rel="noopener" ><img class="mediaIcon" src="./twitter.svg" alt="TwitterIcon"></a></li>
+            <li class="finalList"><a href="https://www.linkedin.com/in/jean-pierre-barba-arredondo-114b851b4/" target="_blank" rel="noopener" ><img class="mediaIcon" src="./Linkedin icon.svg" alt="linkedinIcon"></a></li>
             <li class="finalList"><a href="https://medium.com/" target="_blank" rel="noopener" ><img class="mediaIcon" src="./medium (1).svg" alt="iconMedium"></a></li>
             <li class="finalList"><a href="https://github.com/PierreBarba" target="_blank" rel="noopener" ><img class="mediaIcon" src="./github.svg" alt="iconGithub"></a></li>
             <li class="finalList"><a href="https://angel.co/" target="_blank" rel="noopener"><img class="mediaIcon" src="./angellist.svg" alt="iconAngel"></a></li>
