--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
                 </ul>
             </nav>
         </header>
+        <nav class="header-nav-mobile hidden">
+            <button type="button" class="btn-close-nav">
+              <img src="./newCross.svg" alt="cancel icon" class="cancel-cross">
+            </button>
+            <ul class="newListMobilVersion">
+               <li><a href="#myRecentWork" class="menu-link">Portfolio</a></li>
+               <li><a href="#about-me" class="menu-link">About</a></li>
+               <li><a href="#section-contact" class="menu-link">Contact</a></li>
+            </ul>
+            <hr class="separatorMobilVersion">
+        </nav>  
         <div class="containerDesk">
             <ul class="unlistbar">
                 <li class="text">Portfolio</li>
@@ -30,29 +41,18 @@
                 <li class="text">Contact</li>
             </ul>
         </div>
-        <nav class="header-nav-mobile hidden">
-            <button type="button" class="btn-close-nav">
-              <img src="./newCross.svg" alt="cancel icon" class="cancel-cross">
-            </button>
-            <ul class="newListMobilVersion">
-              <li><a href="#myRecentWork" class="menu-link">Portfolio</a></li>
-              <li><a href="#about-me" class="menu-link">About</a></li>
-              <li><a href="#section-contact" class="menu-link">Contact</a></li>
-            </ul>
-            <hr class="separatorMobilVersion">
-          </nav>  
         <section class="tittleContainer">
             <h1 class="welcome">Hey there. I'm Pierre barba<br><span class="description"> I'm a software developer</span></h1>
             <p class="textcenter">I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
             </p>
-             <ul class="mediaContainer">
-                 <li><a href="https://twitter.com/magpe02" target="_blank" rel="noopener" ><img class="mediaIcon" src="./twitter.svg" alt="Twitter"></a></li>
-                 <li><a href="https://www.linkedin.com/in/jean-pierre-barba-arredondo-114b851b4/" target="_blank" rel="noopener" ><img class="mediaIcon" src="./Linkedin icon.svg" alt="linkedin"></a></li>
-                 <li><a href="https://medium.com/" target="_blank" rel="noopener" ><img class="mediaIcon" src="./medium (1).svg" alt="github"></a></li>
-                 <li><a href="https://github.com/PierreBarba" target="_blank" rel="noopener" ><img class="mediaIcon" src="./github.svg" alt="Twitter"></a></li>
-                 <li><a href="https://angel.co/" target="_blank" rel="noopener"><img class="mediaIcon" src="./angellist.svg" alt="github"></a></li>
-             </ul>
-             <a class="arrowDown" href="#MyRecentWork"><img src="./Disabled.svg" alt="down arrow"></a>
+            <ul class="mediaContainer">
+                <li><a href="https://twitter.com/magpe02" target="_blank" rel="noopener" ><img class="mediaIcon" src="./twitter.svg" alt="Twitter"></a></li>
+                <li><a href="https://www.linkedin.com/in/jean-pierre-barba-arredondo-114b851b4/" target="_blank" rel="noopener" ><img class="mediaIcon" src="./Linkedin icon.svg" alt="linkedin"></a></li>
+                <li><a href="https://medium.com/" target="_blank" rel="noopener" ><img class="mediaIcon" src="./medium (1).svg" alt="github"></a></li>
+                <li><a href="https://github.com/PierreBarba" target="_blank" rel="noopener" ><img class="mediaIcon" src="./github.svg" alt="Twitter"></a></li>
+                <li><a href="https://angel.co/" target="_blank" rel="noopener"><img class="mediaIcon" src="./angellist.svg" alt="github"></a></li>
+            </ul>
+            <a class="arrowDown" href="#MyRecentWork"><img src="./Disabled.svg" alt="down arrow"></a>
         </section>
     <hr class="separator">
     <section class="myRecentWork">
@@ -132,7 +132,7 @@
             </section>
         </div>
     </section>
-    <section class="containerAboutMe">
+    <section class="containerAboutMe" id="about-me">
         <img class="svgImage"src="./illustration 1- about me-mobile.svg" alt="(imgTop)">
         <h2 class="blueTitle">About me</h2>
         <p> I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
@@ -180,7 +180,7 @@
             </section>
         </div>
     </section>
-    <section class="formThirdTittle">
+    <section class="formThirdTittle" id="section-contact">
                 <img class="pilarRight" src="./imgdesktopversion/pilarfinal.svg" alt="pilarright">
                 <img class="cubeFinalLeft" src="./imgdesktopversion/cubofinalleft.svg" alt="cubeFinalLeft">
                 <h2 class="ThirdTittle">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
