change and fix, title of the cards, and change to html.

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     </ul>
                     <button type="button"class="buttongreen">See Project</button>
                 </section>
-            </section>
+            </section> -->
         </div>
     </section>
     <section class="containerAboutMe" id="about-me">
