fix button see project and modify the options

--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
     <section id="myRecentWork">
         <div class="modal"></div>
         <h2 class="titleWorkBlue" id="myWork">My Recent Work</h2>
-        <!-- cards  js  -->
     </section>
     <section class="containerAboutMe" id="about-me">
         <img class="svgImage"src="./illustration 1- about me-mobile.svg" alt="(imgTop)">
@@ -118,6 +117,7 @@
                     <input class="inputTextLast" type="text" name="name" id="name" maxlength="30" placeholder="last name" required>
                     <input class="inputEmail" type="email" name="name" id="name" placeholder="email adress" required>
                     <textarea class="finalTextarea" name="message" id="message" rows="10" cols="30" placeholder="enter text here" maxlength="500" required></textarea>
+                    <p class="emailError">email can only contanin lowercase</p>
                     <button class="finalButton" type="submit">get in touch</button>
                 </form>
             </section>
@@ -138,4 +138,3 @@
     <script src="./index.js"></script>
 </body>
 </html>
-
